# resume-generator

./: .gitignore  .gitmodules  main_gen_tex.py  pyproject.toml  readme.md  run_gen-pdf.sh  settings.py
FAANGPath Simple Template/: resume_faangpath.tex
config/: cv.json  ui.json
data/: base.json  info.json  sample.json
src/: LinesConstructor.py  SectionConstructor.py  core.py  main.py  settings.py  utils.py
